[package]
name = "process-exporter"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
prometheus = "0.14"
once_cell = "1.19"
widestring = "1.0"
log = "0.4"
env_logger = "0.11.8"
anyhow = "1"
sysinfo = "0.35"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
axum = { version = "0.8", features = ["macros"] }

# Windows API FFI
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Time",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
] }


[dev-dependencies]
test-log = "0.2.17"
pretty_assertions = "1.4.1"
